# advent_2025

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
day1/: Cargo.toml
day1/src/: lib.rs  main.rs
day10/: Cargo.toml
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day12/: Cargo.toml
day12/src/: lib.rs  main.rs
day2/: Cargo.toml
day2/src/: lib.rs  main.rs
day3/: Cargo.toml
day3/src/: lib.rs  main.rs
day4/: Cargo.toml
day4/src/: lib.rs  main.rs
day5/: Cargo.toml
day5/src/: lib.rs  main.rs
day6/: Cargo.toml
day6/src/: lib.rs  main.rs
day7/: Cargo.toml
day7/src/: lib.rs  main.rs
day8/: Cargo.toml
day8/src/: lib.rs  main.rs
day9/: Cargo.toml
day9/src/: lib.rs  main.rs
template/: Cargo.toml
template/src/: main.rs
utils/: Cargo.toml
utils/src/: graph.rs  lib.rs  math.rs  region.rs  runner.rs  solution.rs
utils/src/grid/: fixedgrid.rs  matrix.rs  mod.rs  picture.rs  sparsegrid.rs
utils/src/point/: direction.rs  mod.rs  point2d.rs
xtask/: Cargo.toml
xtask/src/: main.rs
