[workspace]
resolver = "2"
members = [
    "utils",
    "template",
    "xtask", "day1", "day2"]

[workspace.dependencies]
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0"
# A dead simple ANSI terminal color painting library.
yansi = "1.0.0-gamma"
itertools = "0.14"
# An implementation of regular expressions for Rust. This implementation uses finite automata …
regex = "1.10"
# Pathfinding, flow, and graph algorithms
pathfinding = "4.12"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
lazy_static = "1.4"

strum = "0.26.3"                    # Helpful macros for working with enums and strings
strum_macros = "0.26.4"             # Helpful macros for working with enums and strings
array2d = "0.3"
nom = "7.1.3"                       # A byte-oriented, zero-copy, parser combinators library
z3 = "0.12.1"
memoize = "0.4.2"          # Attribute macro for auto-memoizing functions with somewhat-simple signatures

[profile.release]
debug = true
