[package]
name = "day10"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = {workspace = true}
tracing-test = {workspace = true}
anyhow = {workspace = true}
regex = {workspace = true}
lazy_static = {workspace = true}
pathfinding = {workspace = true}
itertools = {workspace = true}
memoize = {workspace = true}
good_lp = { version = "1.14.2", features = ["highs"], default-features = false }

[dependencies.utils]
path = "../utils"