[package]
name = "day2"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = {workspace = true}
tracing-test = {workspace = true}
anyhow = {workspace = true}
regex = {workspace = true}
lazy_static = {workspace = true}
pathfinding = {workspace = true}
itertools = {workspace = true}
memoize = {workspace = true}

[dependencies.utils]
path = "../utils"